Added main images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
 	</HEAD>
 
 	<BODY>
-	<DIV="puzzle"></DIV>
-	<DIV ID="controls">
+	<DIV ID="puzzle" ALIGN="CENTER">
+		<TABLE BORDER="3">
+			<TR>
+				<TD>
+					<IMG SRC="images/1.png"> <IMG SRC="images/2.png"> <IMG SRC="images/1.png"> <IMG SRC="images/2.png"> <BR>
+					<IMG SRC="images/2.png"> <IMG SRC="images/1.png"> <IMG SRC="images/2.png"> <IMG SRC="images/1.png"> <BR>
+					<IMG SRC="images/1.png"> <IMG SRC="images/2.png"> <IMG SRC="images/1.png"> <IMG SRC="images/2.png"> <BR>
+					<IMG SRC="images/2.png"> <IMG SRC="images/1.png"> <IMG SRC="images/2.png"> 
+				</TD>
+			</TR>
+		</TABLE>
+	</DIV>
+	<DIV ID="controls" ALIGN="CENTER">
 		<BUTTON ID="start">Start</BUTTON>		
 	</DIV>
 </BODY>
