Added link to CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<META CHARSET="UTF-8">
 		<TITLE>Puzzle</TITLE>
 		<SCRIPT SRC="script/script.js"></SCRIPT>
+		<LINK REL="stylesheet" HREF="style/style.css">
 	</HEAD>
 
 	<BODY>
